
Discipline:
- Ajout de droits extractDiscProf et extractDiscProfP pour les accès professeur 
  et professeur principal à l'export ODS des incidents.
- Sanctions du jour: Possibilité de tri sur le tableau des sanctions non effectuées.
- Possibilité de définir des modèles spécifiques pour des types de sanctions particuliers.

Engagements:
- Possibilité d'afficher les engagements sur les pages Equipe pédago.

Accueil élèves et parents
- en page résumé, ne pas afficher l'aide sur les devoirs si le module cahier de texte n'est pas ouvert.

Statistiques:
- Ajout de l'extraction des sous-groupes ne concernant qu'une classe.
- Possibilité d'exporter l'établissement d'origine dans l'export de Bulletins.

Orientation:
- Ajout d'un module orientation pour saisir les voeux d'orientation et l'orientation conseillée.

Général:
- Affichage de l'identité de la personne qui suit la classe (chef, adjoint)
  et du professeur principal dans diverses pages de choix de classes.
- Possibilité d'afficher le dates de vacances et jours fériés en page d'accueil simplifiée professeur.
- Affichage d'un témoin pour l'appartenance à tel ou tel groupe renseigné dans Sconet lors de la Mise à jour d'après Sconet.

Gepi-1.6.8 (05/01/2016)
===========================
Librairies:
- Mise à jour de PHPMailer (https://github.com/PHPMailer/PHPMailer) en version 5.2.13
- HTMLPurifier : Mise à jour en 4.7.0

Discipline:
- Possibilité de signaler des saisies d'incidents (aux utilisateurs suivant 
  telle ou telle classe) par mod_alerte et non plus seulement par mail.
- Possibilité de déposer/envoyer les messages à tous les CPE plutôt que 
  seulement à celui chargé du suivi de l'élève.
- Affichage de la liste des sanctions depuis la saisie/modif d'incident.
- Envoi de mails lors de la saisie de sanction et indication de sanction effectuée ou non.
- Amélioration du tri des natures d'incident proposées.
- Possibilité pour un utilisateur de supprimer un incident qu'il a déclaré si 